tests/paczka1/small_fuzzy/33357651.err
Error in line 6: GHmw S922 -1,0
Error in line 9: wyv5pLzo0 S385 56,05
Error in line 10: wyv5pLzo0 S385 55,4
